--- a/login.html
+++ b/login.html
@@ -133,7 +133,7 @@
         function login() {
             const users = [
                 { username: "amar", password: "april" },
-                { username: "", password: "" },
+                { username: "free", password: "free1" },
                 { username: "", password: "" },
                 { username: "", password: "" }
             ];
